# cosmic-panel

./: .gitignore  Cargo.toml  Makefile  README.md  config.ron  deny.toml  flake.nix  justfile  rust-toolchain.toml  rustfmt.toml
cosmic-dock-epoch-bin/: Cargo.toml
cosmic-dock-epoch-bin/src/: main.rs
cosmic-dock-epoch-config/: Cargo.toml
cosmic-dock-epoch-config/src/: config.rs  lib.rs
cosmic-dock-epoch-xdg-wrapper/: Cargo.toml
cosmic-dock-epoch-xdg-wrapper/src/: client.rs  lib.rs  output.rs  seat.rs  server.rs  shared_state.rs  util.rs
cosmic-dock-epoch-xdg-wrapper/src/space/: cached_buffer.rs  popup.rs  space.rs  space_manager.rs  top_level.rs
cosmic-panel-bin/: Cargo.toml
cosmic-panel-bin/src/: config_watching.rs  main.rs  minimize.rs  notifications.rs  panel_dbus.rs  process.rs  space.rs  workspaces_dbus.rs
cosmic-panel-bin/src/iced/: mod.rs  panel_message.rs  state.rs
cosmic-panel-bin/src/iced/elements/: background.rs  mod.rs  overflow_button.rs  overflow_popup.rs  target.rs
cosmic-panel-bin/src/space/: layout.rs  mod.rs  overflow.rs  panel_space.rs  popup.rs  render.rs  spacer.rs  toplevel.rs  wrapper_space.rs
cosmic-panel-bin/src/space/corner_element/: mod.rs  shader.frag
cosmic-panel-bin/src/space_container/: mod.rs  space_container.rs  toplevel.rs  workspace.rs  wrapper_space.rs
cosmic-panel-bin/src/space_container.rs/: wrapper_space.rs
cosmic-panel-bin/src/xdg_shell_wrapper/: mod.rs  shared_state.rs  util.rs
cosmic-panel-bin/src/xdg_shell_wrapper/client/: mod.rs  state.rs
cosmic-panel-bin/src/xdg_shell_wrapper/client/handlers/: compositor.rs  cosmic_corner_radius.rs  ext_background_effect.rs  keyboard.rs  layer_shell.rs  mod.rs  output.rs  overlap.rs  pointer.rs  seat.rs  toplevel.rs  touch.rs  workspace.rs  wp_fractional_scaling.rs  wp_security_context.rs  wp_viewporter.rs
cosmic-panel-bin/src/xdg_shell_wrapper/client/handlers/data_device/: data_device.rs  data_offer.rs  data_source.rs  mod.rs
cosmic-panel-bin/src/xdg_shell_wrapper/protocols/: mod.rs  toplevel_info.rs  workspace.rs
cosmic-panel-bin/src/xdg_shell_wrapper/server/: state.rs
cosmic-panel-bin/src/xdg_shell_wrapper/server/handlers/: compositor.rs  cosmic_corner_radius.rs  cursor.rs  ext_background_effect.rs  fractional.rs  layer.rs  mod.rs  viewporter.rs  xdg_shell.rs
cosmic-panel-bin/src/xdg_shell_wrapper/space/: egl_surface.rs  mod.rs  popup.rs  space.rs  subsurface.rs  toplevel.rs  workspace.rs  wrapper_space_element.rs
cosmic-panel-bin/src/xdg_shell_wrapper/src/: lib.rs  shared_state.rs  util.rs
cosmic-panel-bin/src/xdg_shell_wrapper/src/client/: state.rs
cosmic-panel-bin/src/xdg_shell_wrapper/src/client/handlers/: compositor.rs  keyboard.rs  layer_shell.rs  mod.rs  output.rs  pointer.rs  seat.rs  shell.rs  toplevel.rs  workspace.rs  wp_fractional_scaling.rs  wp_security_context.rs  wp_viewporter.rs
cosmic-panel-bin/src/xdg_shell_wrapper/src/client/handlers/data_device/: data_device.rs  data_offer.rs  data_source.rs  mod.rs
cosmic-panel-bin/src/xdg_shell_wrapper/src/protocols/: toplevel_management.rs
cosmic-panel-bin/src/xdg_shell_wrapper/src/server/: mod.rs  state.rs
cosmic-panel-bin/src/xdg_shell_wrapper/src/server/handlers/: compositor.rs  layer.rs  mod.rs  toplevel.rs  viewporter.rs  workspace.rs  xdg_shell.rs
cosmic-panel-bin/src/xdg_shell_wrapper/src/space/: egl_surface.rs  mod.rs  popup.rs  space.rs  workspace.rs  wrapper_space_element.rs
cosmic-panel-config/: Cargo.toml  config.ron
cosmic-panel-config/src/: config.rs  container_config.rs  lib.rs  panel_config.rs
cosmic-panel-xdg-wrapper/: Cargo.toml
cosmic-panel-xdg-wrapper/src/: client.rs  lib.rs  output.rs  seat.rs  server.rs  shared_state.rs  util.rs
cosmic-panel-xdg-wrapper/src/space/: cached_buffer.rs  mod.rs  popup.rs  space.rs  space_manager.rs  surface.rs  top_level.rs
data/default_schema/com.system76.CosmicPanel.Dock/v1/: anchor  autohide  autohover_delay_ms  name  plugins_center
data/default_schema/com.system76.CosmicPanel.Panel/v1/: anchor  autohide_behavior  background  keyboard_interactivity  name  plugins_center  plugins_wings  size
data/default_schema/com.system76.CosmicPanel/v1/: entries
debian/: changelog  control  rules
src/: main.rs  plugin.rs  style.css  utils.rs
src/components/: mod.rs  wayland_window.rs  window.rs  window_inner.rs  x_window.rs
src/dock_item/: imp.rs  mod.rs
src/dock_list/: imp.rs  mod.rs
src/dock_object/: imp.rs  mod.rs
src/dock_popover/: imp.rs  mod.rs
src/window/: imp.rs  mod.rs
src/window_inner/: imp.rs  mod.rs
xdg-shell-wrapper/: Cargo.toml
xdg-shell-wrapper-config/: Cargo.toml
xdg-shell-wrapper-config/src/: lib.rs
xdg-shell-wrapper/src/: lib.rs  seat.rs  util.rs
xdg-shell-wrapper/src/space/: cached_buffer.rs  mod.rs  popup.rs  surface.rs  top_level.rs
