[workspace]
members = ["cosmic-panel-bin", "cosmic-panel-config"]

[workspace.package]
license = "GPL-3.0-only"

[profile.release]
lto = "thin"

[patch."https://github.com/Smithay/client-toolkit"]
sctk = { git = "https://github.com/smithay/client-toolkit//", package = "smithay-client-toolkit", rev = "3bed072" }
[patch."https://github.com/pop-os/xdg-shell-wrapper"]
# xdg-shell-wrapper-config = { path = "../xdg-shell-wrapper/xdg-shell-wrapper-config" }
# xdg-shell-wrapper = { path = "../xdg-shell-wrapper" }
# xdg-shell-wrapper-config = { git = "https://github.com/pop-os/xdg-shell-wrapper//", branch = "update-smithay-sctk" }
# xdg-shell-wrapper = { git = "https://github.com/pop-os/xdg-shell-wrapper//", branch = "update-smithay-sctk" }
[workspace.dependencies]
sctk = { git = "https://github.com/smithay/client-toolkit", package = "smithay-client-toolkit", features = [
    "calloop",
    "xkbcommon",
] }
