[package]
name = "cosmic-dock-epoch-config"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.53"
ron = "0.7.0"
serde = { version = "1.0.136", features = ["derive"] }
xdg = "2.4.0"
notify = "5.0.0-pre.13"
sctk = { package = "smithay-client-toolkit", git = "https://github.com/smithay/client-toolkit.git", default-features = false, features = ["calloop"] }
