[package]
name = "cosmic-panel-bin"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "cosmic-panel"
path = "src/main.rs"

[dependencies]
smithay = { git = "https://github.com/smithay/smithay", default-features = false, features = [
    "use_system_lib",
    "desktop",
    "backend_egl",
    "backend_drm",
    "renderer_gl",
], rev = "49ba425" }
# sctk = { git = "https://github.com/smithay/client-toolkit", package = "smithay-client-toolkit", features = ["calloop", "xkbcommon"] }
sctk.workspace = true
# sctk = { package = "smithay-client-toolkit", path = "../../fork/client-toolkit", default-features = false, features = ["calloop", "xkbcommon"] }
wayland-protocols = { version = "0.31.0", features = ["staging"] }
xdg-shell-wrapper-config = { git = "https://github.com/pop-os/xdg-shell-wrapper", branch = "touch" }
xdg-shell-wrapper = { git = "https://github.com/pop-os/xdg-shell-wrapper", branch = "touch" }
# xdg-shell-wrapper = { path = "../../xdg-shell-wrapper" }
# xdg-shell-wrapper-config = { path = "../../xdg-shell-wrapper/xdg-shell-wrapper-config" }
cctk = { package = "cosmic-client-toolkit", git = "https://github.com/pop-os/cosmic-protocols", rev = "e65fa5e" }
# cctk = { package = "cosmic-client-toolkit", path = "../../cosmic-protocols/client-toolkit" }
wayland-egl = "0.32.0"
wayland-protocols-wlr = { version = "0.2.0", features = ["client"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = [
    "fmt",
    "env-filter",
    "ansi",
] }
tracing-journald = "0.3.0"
tracing-futures = "0.2.5"
launch-pad = { git = "https://github.com/pop-os/launch-pad.git" }
# launch-pad = { path = "../../launch-pad" }
cosmic-panel-config = { path = "../cosmic-panel-config" }
cosmic-theme = { git = "https://github.com/pop-os/libcosmic", package = "cosmic-theme" }
transpose = "0.2.2"
anyhow = "1.0.63"
shlex = "1.1.0"
log-panics = { version = "2", features = ["with-backtrace"] }
libc = "0.2.132"
freedesktop-desktop-entry = "0.5.0"
xdg = "2.4.1"
itertools = "0.11"
notify = "6.0"
tokio = { version = "1", features = [
    "process",
    "sync",
    "rt",
    "macros",
    "io-util",
    "time",
] }
csscolorparser = "0.6.2"
cosmic-config = { git = "https://github.com/pop-os/libcosmic" }
ron = "0.8"
sendfd = "0.4"
cosmic-notifications-util = { git = "https://github.com/pop-os/cosmic-notifications", default-features = false }
# cosmic-notifications-util = { path = "../../cosmic-notifications-daemon/cosmic-notifications-util", default-features = false }
serde = "1.0"
bytemuck = "1.13"
zbus = { version = "4.2.1", features = ["tokio", "p2p"] }
