[package]
name = "cosmic-panel-bin"
version = "0.1.0"
edition = "2024"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "cosmic-panel"
path = "src/main.rs"

[dependencies]
calloop = { version = "0.14.3", features = ["executor"] }
ordered-float = "5.0.0"
smithay = { git = "https://github.com/smithay/smithay", default-features = false, features = [
    "use_system_lib",
    "desktop",
    "backend_egl",
    "backend_drm",
    "renderer_gl",
], rev = "1d05641" }
# sctk = { git = "https://github.com/smithay/client-toolkit", package = "smithay-client-toolkit", features = ["calloop", "xkbcommon"] }
sctk.workspace = true
# sctk = { package = "smithay-client-toolkit", path = "../../fork/client-toolkit", default-features = false, features = ["calloop", "xkbcommon"] }
wayland-protocols = { version = "0.32.9", features = ["staging"] }

xdg-shell-wrapper-config = { path = "../xdg-shell-wrapper-config" }
cctk = { package = "cosmic-client-toolkit", git = "https://github.com/pop-os/cosmic-protocols" }
# cctk = { package = "cosmic-client-toolkit", path = "../../cosmic-protocols/client-toolkit" }
wayland-egl = "0.32.8"
wayland-protocols-wlr = { version = "0.3.9", features = ["client"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "std",
    "env-filter",
    "registry",
    "fmt",
    "ansi",
] }
tracing-journald = "0.3"
launch-pad = { git = "https://github.com/pop-os/launch-pad.git" }
# launch-pad = { path = "../../launch-pad" }
cosmic-panel-config = { path = "../cosmic-panel-config" }
cosmic-theme = { git = "https://github.com/pop-os/libcosmic", package = "cosmic-theme" }
anyhow = "1.0.99"
shlex = "1.3.0"
log-panics = { version = "2", features = ["with-backtrace"] }
libc = "0.2.175"
freedesktop-desktop-entry = "0.7.14"
itertools = "0.14"
notify = "8"
tokio = { version = "1", features = [
    "process",
    "sync",
    "rt",
    "macros",
    "io-util",
    "time",
] }
libcosmic = { git = "https://github.com/pop-os/libcosmic" }
iced_tiny_skia = { git = "https://github.com/pop-os/libcosmic/" }
tiny-skia = "0.11"
ron = "0.11"
rand = "0.9.2"
rustix = "1.0"
cosmic-notifications-util = { git = "https://github.com/pop-os/cosmic-notifications", default-features = false }
# cosmic-notifications-util = { path = "../../cosmic-notifications-daemon/cosmic-notifications-util", default-features = false }
wayland-backend = { version = "0.3.11", features = ["client_system"] }
zbus = { version = "5.10", features = ["tokio", "p2p"] }
