[package]
name = "cosmic-panel-bin"
version = "0.1.0"
edition = "2024"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "cosmic-panel"
path = "src/main.rs"

[dependencies]
calloop = { version = "0.14.4", features = ["executor"] }
ordered-float = "5.3.0"
smithay = { git = "https://github.com/smithay/smithay", default-features = false, features = [
    "use_system_lib",
    "desktop",
    "backend_egl",
    "backend_drm",
    "renderer_gl",
], rev = "20d2dac" }
# sctk = { git = "https://github.com/smithay/client-toolkit", package = "smithay-client-toolkit", features = ["calloop", "xkbcommon"] }
sctk.workspace = true
# sctk = { package = "smithay-client-toolkit", path = "../../fork/client-toolkit", default-features = false, features = ["calloop", "xkbcommon"] }
wayland-protocols = { version = "0.32.12", features = ["staging"] }

xdg-shell-wrapper-config = { path = "../xdg-shell-wrapper-config" }
cctk = { package = "cosmic-client-toolkit", git = "https://github.com/pop-os/cosmic-protocols" }
# cctk = { package = "cosmic-client-toolkit", path = "../../cosmic-protocols/client-toolkit" }
wayland-egl = "0.32.11"
wayland-protocols-wlr = { version = "0.3.12", features = ["client"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "std",
    "env-filter",
    "registry",
    "fmt",
    "ansi",
] }
tracing-journald = "0.3"
launch-pad = { git = "https://github.com/pop-os/launch-pad.git" }
# launch-pad = { path = "../../launch-pad" }
cosmic-panel-config = { path = "../cosmic-panel-config" }
cosmic-theme = { git = "https://github.com/pop-os/libcosmic", package = "cosmic-theme" }
# cosmic-theme = { path = "../../libcosmic/cosmic-theme", package = "cosmic-theme" }
anyhow = "1.0.102"
shlex = "1.3.0"
log-panics = { version = "2", features = ["with-backtrace"] }
freedesktop-desktop-entry = "0.8"
itertools = "0.14"
notify = "8"
tokio = { version = "1", features = [
    "process",
    "sync",
    "rt",
    "rt-multi-thread",
    "macros",
    "io-util",
    "time",
] }
libcosmic = { git = "https://github.com/pop-os/libcosmic", default-features = false }
iced_tiny_skia = { git = "https://github.com/pop-os/libcosmic/" }
tiny-skia = "0.11"
ron = "0.12"
rand = "0.10"
cosmic-notifications-config = { git = "https://github.com/pop-os/cosmic-notifications", default-features = false }
# cosmic-notifications-util = { path = "../../cosmic-notifications/cosmic-notifications-config", default-features = false }
wayland-backend = { version = "0.3.15", features = ["client_system"] }
zbus = { version = "5.15", features = ["tokio", "p2p"] }
ordered-stream = "0.2.0"
