[package]
name = "cosmic-panel-config"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["wayland-rs"]
wayland-rs = ["wayland-protocols-wlr", "xdg-shell-wrapper-config"]
[dependencies]
anyhow = "1.0.63"
ron = "0.8.0"
serde = { version = "1.0.144", features = ["derive"] }
xdg = "2.4.1"
slog = { version = "2.7.0", features = ["max_level_trace", "release_max_level_warn"] }
wayland-protocols-wlr = { version = "=0.1.0-beta.14", features = ["server"], optional = true}
xdg-shell-wrapper-config = { git = "https://github.com/pop-os/xdg-shell-wrapper", optional = true, rev = "1bf60b8eff599ef2ee68d5ce8d46f05b7807ffc6" }
# xdg-shell-wrapper-config = { path = "../../xdg-shell-wrapper/xdg-shell-wrapper-config", optional = true }
