[package]
name = "cosmic-panel-config"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["wayland-rs"]
wayland-rs = ["wayland-protocols-wlr", "xdg-shell-wrapper-config", "sctk"]
[dependencies]
anyhow = "1.0.68"
ron = "0.8.0"
serde = { version = "1.0.152", features = ["derive"] }
tracing = "0.1.37"
wayland-protocols-wlr = { version = "0.3.1", features = [
    "server",
    "client",
], optional = true }
cosmic-config = { git = "https://github.com/pop-os/libcosmic" }
xdg-shell-wrapper-config = { path = "../xdg-shell-wrapper-config", optional = true }
# xdg-shell-wrapper-config = { git = "https://github.com/pop-os/xdg-shell-wrapper", optional = true }
sctk.workspace = true
sctk.optional = true
