[package]
name = "xdg-shell-wrapper"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smithay = { git = "https://github.com/smithay/smithay", default-features = false, features = ["use_system_lib", "desktop", "backend_egl", "backend_drm", "renderer_gl", "slog-stdlog"] }
# smithay = { path = "../../smithay", default-features = false, features = ["use_system_lib", "desktop", "backend_egl", "backend_drm", "renderer_gl", "slog-stdlog"] }
sctk = { package = "smithay-client-toolkit", git = "https://github.com/wash2/client-toolkit.git", default-features = false, features = ["calloop"] }
# sctk = { package = "smithay-client-toolkit", path = "../../client-toolkit", default-features = false, features = ["calloop"] }
calloop = "0.10.0"
anyhow = "1.0.53"
ron = "0.7.0"
serde = { version = "1.0.136", features = ["derive"] }
slog = { version = "2.7.0", features = ["max_level_trace", "release_max_level_warn"] }
wayland-egl = "0.29.4"
libc = "0.2.117"
tempfile = "3.3"
once_cell = "1.10.0"
itertools = "0.10.3"
cosmic-panel-config = { path ="../cosmic-panel-config"}
shlex = "1.1.0"
